syntax = "proto3";

package adventofcode;

option go_package = "github.com/brotherlogic/adventofcode/proto";

message SolveRequest {
    int32 year = 1;
    int32 day = 2;
    int32 part = 3;
}

message SolveResponse {
    int32 answer = 1;
    string string_answer = 2;
    int64 big_answer = 3;
}

message UploadRequest {
    int32 year = 1;
    int32 day = 2;
    string data = 3;
}

message UploadResponse {}

service AdventServerService {
    rpc Solve(SolveRequest) returns (SolveResponse) {};
    rpc Upload(UploadRequest) returns (UploadResponse) {};
}